--- a/css/base.css
+++ b/css/base.css
@@ -258,7 +258,7 @@ main {
 	margin: 0 auto;
 	max-width: 100%;
 	filter: grayscale(1);
-	transition: filter 0.3s;
+	transition: filter 0.4s;
 	/* pointer-events: auto; */
 }
 
@@ -323,7 +323,7 @@ main {
 	left: 0;
 	background: #000;
 	position: absolute;
-	z-index: 100;
+	z-index: 9999999;
 	transform: translate3d(100%,0,0);
 }
 
