--- a/css/base.css
+++ b/css/base.css
@@ -102,8 +102,9 @@ main {
 
 .sub_title{
 	font-family: 'Gloria Hallelujah', cursive;
-	padding:0rem 5rem;
-	margin-bottom: 3rem;
+	padding:0rem 2rem;
+	max-width: 840px;
+    margin: 2rem auto 4rem auto;
 }
 /* Header */
 .codrops-header {
