--- a/css/base.css
+++ b/css/base.css
@@ -103,8 +103,9 @@ main {
 .sub_title{
 	font-family: 'Gloria Hallelujah', cursive;
 	padding:0rem 2rem;
-	max-width: 840px;
+	max-width: 920px;
     margin: 2rem auto 4rem auto;
+	line-height: 28px;
 }
 /* Header */
 .codrops-header {
